--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -21,6 +21,9 @@ python-multipart==0.0.6
 # HTML / File utilities
 beautifulsoup4==4.12.3
 python-docx==1.1.2
+# Summarization
+transformers==4.41.1
+accelerate>=0.27.0
 # python-magic==0.4.27  # Commented out - can cause issues on macOS
 
 # Graph & Relationships
